--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -2,16 +2,16 @@ name: build and test
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
   build:
-   runs-on: ubuntu-latest
-   steps:
+    runs-on: ubuntu-latest
+    steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup up Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
@@ -20,7 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest
-          
+
   test:
     needs: build
     runs-on: ubuntu-latest
@@ -38,6 +38,3 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
           pytest
-          
-
-    
