--- a/.github/workflows/python-matrix-deploy.yaml
+++ b/.github/workflows/python-matrix-deploy.yaml
@@ -1,4 +1,5 @@
 name: Python Matrix Build and Test
+
 on:
   push:
     branches: [ main ]
@@ -13,25 +14,28 @@ jobs:
         python-version: ["3.9", "3.10", "3.11"]
 
     steps:
-       - name: Checkout code
-         uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-       - name: Set up Python ${{ matrix.python-version }}
-         uses: actions/setup-python@v5
-         with:
-           python-version: ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
 
-       -  name: Install dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install pytest
+      - name: Run pytest
+        run: |
+          pytest
 
-       -  name: Run pytest
-          run: |
-            pytest
   deploy:
     needs: build-and-tests
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-  
+
+    steps:
+      - name: Deploy placeholder
+        run: echo "Deploying because tests passed on main"
