--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -28,4 +28,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: my-python-app:${{ github.ref_name }} .
+          tags: my-python-app:${{ github.ref_name }}
