--- a/.github/workflows/full-ci.yaml
+++ b/.github/workflows/full-ci.yaml
@@ -36,9 +36,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+
       - name: Build image
         uses: docker/build-push-action@v6
         with:
           context: .
           push: false
-          tags: my-python-app:feature-full-ci
+          tags: gowkrrish/my-python-app:feature-full-ci
